# TUM-CPS-HZ-Planning

./: README.md
ompl/: CMakeLists.txt
ompl/informedhz/: HZFaceSampler.h  HybridZonotope.h
ompl/informedhz/src/: HZFaceSampler.cpp  HybridZonotope.cpp
ompl/rrt/: InformedHZ.h
ompl/rrt/src/: InformedHZ.cpp
pdt/: planner_type.h
pdt/benchmarks/2025-09-16_11-54-47_defaultWallGap2D/: config.json  log.txt  report.aux  report.tex
pdt/benchmarks/2025-09-16_11-54-47_defaultWallGap2D/statistics/results_0/: defaultAITstar_cost_percentiles.csv  defaultAITstar_initial_solution_durations_edf.csv  defaultAITstar_initial_solution_durations_histogram.csv  defaultAITstar_initial_solutions.csv  defaultAITstar_median_initial_solution.csv  defaultAITstar_medians.csv  defaultEITstar_cost_percentiles.csv  defaultEITstar_initial_solution_durations_edf.csv  defaultEITstar_initial_solution_durations_histogram.csv  defaultEITstar_initial_solutions.csv  defaultEITstar_median_initial_solution.csv  defaultEITstar_medians.csv  defaultInformedRRTstar_cost_percentiles.csv  defaultInformedRRTstar_initial_solution_durations_edf.csv  defaultInformedRRTstar_initial_solution_durations_histogram.csv  defaultInformedRRTstar_initial_solutions.csv  defaultInformedRRTstar_median_initial_solution.csv  defaultInformedRRTstar_medians.csv
pdt/benchmarks/2025-09-16_11-54-47_defaultWallGap2D/tikz/: SuccessAxis_AllPlannersMedianCostAxis__.tikz  SuccessAxis_defaultAITstarISDPA_defaultAITstarInitialSolutionScatterAxis_.tikz  SuccessAxis_defaultEITstarISDPA_defaultEITstarInitialSolutionScatterAxis_.tikz  SuccessAxis_defaultInformedRRTstarISDPA_defaultInformedRRTstarInitialSolutionScatterAxis_.tikz  axes_collection_0.tikz  defaultAITstarMedianCostAxis_defaultAITstarCostPercentileEvolutionAxis_.tikz  defaultEITstarMedianCostAxis_defaultEITstarCostPercentileEvolutionAxis_.tikz  defaultInformedRRTstarMedianCostAxis_defaultInformedRRTstarCostPercentileEvolutionAxis_.tikz
pdt/benchmarks/2025-09-16_11-54-47_defaultWallGap2D/tikz-externalized/: report-figure0.md5  report-figure1.md5  report-figure2.md5  report-figure3.md5  report-figure4.md5  report-figure5.md5  report-figure6.md5  report-figure7.md5
pdt/benchmarks/2025-09-16_12-27-08_defaultNarrowPassage2D/: config.json  log.txt  report.aux  report.tex
pdt/benchmarks/2025-09-16_12-27-08_defaultNarrowPassage2D/statistics/results_0/: defaultInformedHZ_cost_percentiles.csv  defaultInformedHZ_initial_solution_durations_edf.csv  defaultInformedHZ_initial_solution_durations_histogram.csv  defaultInformedHZ_initial_solutions.csv  defaultInformedHZ_median_initial_solution.csv  defaultInformedHZ_medians.csv  defaultInformedRRTstar_cost_percentiles.csv  defaultInformedRRTstar_initial_solution_durations_edf.csv  defaultInformedRRTstar_initial_solution_durations_histogram.csv  defaultInformedRRTstar_initial_solutions.csv  defaultInformedRRTstar_median_initial_solution.csv  defaultInformedRRTstar_medians.csv
pdt/benchmarks/2025-09-16_12-27-08_defaultNarrowPassage2D/tikz/: SuccessAxis_AllPlannersMedianCostAxis__.tikz  SuccessAxis_defaultInformedHZISDPA_defaultInformedHZInitialSolutionScatterAxis_.tikz  SuccessAxis_defaultInformedRRTstarISDPA_defaultInformedRRTstarInitialSolutionScatterAxis_.tikz  axes_collection_0.tikz  defaultInformedHZMedianCostAxis_defaultInformedHZCostPercentileEvolutionAxis_.tikz  defaultInformedRRTstarMedianCostAxis_defaultInformedRRTstarCostPercentileEvolutionAxis_.tikz
pdt/benchmarks/2025-09-16_12-27-08_defaultNarrowPassage2D/tikz-externalized/: report-figure0.md5  report-figure1.md5  report-figure2.md5  report-figure3.md5  report-figure4.md5  report-figure5.md5
pdt/demo/: hz_smoketest.json  hz_visualization.json
pdt/factories/: planner_factory.cpp
pdt/planners/: default_informedhz.json
pdt/utilities/: get_best_cost.cpp
